- navbar 드롭박스 메뉴 삭제 - content layout 추가

--- a/src/main/resources/static/css/home_style.css
+++ b/src/main/resources/static/css/home_style.css
@@ -70,7 +70,8 @@ a{
 
 .navbar__menu li:hover ul{
     display:block;
-    border:1px solid black;
+    list-style:none;
+    text-align:center
 }
 
 .navbar__menu li ul li:hover a{
