--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -10,15 +10,15 @@
         <ul class="navbar__menu">
             <li>
                 <a href="">Home</a>
-                <ul class="sub_menu">
+                <!--<ul class="sub_menu">
                     <li><a href="#">sub1</a></li>
                     <li><a href="#">sub2</a></li>
-                </ul>
+                </ul>-->
             </li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Weddings</a></li>
-            <li><a href="">FAQ</a></li>
-            <li><a href="">Bookings</a></li>
+            <li><a href="">User</a></li>
+            <li><a href="">Book</a></li>
+            <li><a href="">Book Report</a></li>
+            <li><a href="">Order</a></li>
         </ul>
 
         <ul class="navbar__icons">
