--- a/src/main/resources/templates/layouts/default_layout.html
+++ b/src/main/resources/templates/layouts/default_layout.html
@@ -23,6 +23,7 @@
     <th:block th:replace="fragments/nav :: navFragment"></th:block>
 </div>
 
+<th:block layout:fragment="content"></th:block>
 <div>
     <th:block th:replace="fragments/floating :: floatingFragment"></th:block>
 </div>
