--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,17 +1,31 @@
-<!doctype html>
-<html lang="ko" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{/layouts/default_layout}">
-
-<div layout:fragment="content">
-    <h1>Content</h1>
-</div>
-<!--<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments/header :: header">
+  <title>Hello</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-
-</body>-->
+<div class="container">
+  <div th:replace="fragments/bodyHeader :: bodyHeader" />
+  <div class="jumbotron">
+    <h1>Book Report Project</h1>
+    <p class="lead">회원기능</p>
+    <p>
+      <a class="btn btn-lg btn-secondary" href="/members/new">회원 가입</a>
+      <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a>
+    </p>
+    <p class="lead">책 관련</p>
+    <p>
+      <a class="btn btn-lg btn-dark" href="/items/new">책 등록</a>
+      <a class="btn btn-lg btn-dark" href="/items">책 목록</a>
+    </p>
+    <p class="lead">주문 기능</p>
+    <p>
+      <a class="btn btn-lg btn-info" href="/order">독후감 등록</a>
+      <a class="btn btn-lg btn-info" href="/orders">독후감 목록</a>
+    </p>
+  </div>
+  <div th:replace="fragments/footer :: footer" />
+</div> <!-- /container -->
+</body>
 </html>
