- Member 조회 페이지

--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -39,11 +39,11 @@
 
           <div class="my-3">
             <div class="form-check">
-              <input id="man" name="sexualMethod" value="Man" type="radio" class="form-check-input" checked="" required="">
+              <input id="man" name="sexualMethod" value="man" type="radio" class="form-check-input" checked="" required="">
               <label class="form-check-label" for="man">Man</label>
             </div>
             <div class="form-check">
-              <input id="woman" name="sexualMethod" value="Woman" type="radio" class="form-check-input" required="">
+              <input id="woman" name="sexualMethod" value="woman" type="radio" class="form-check-input" required="">
               <label class="form-check-label" for="woman">Woman</label>
             </div>
           </div>
