- Book form 등록페이지 - Member등록페이지 성별 오류 수정

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,8 +16,8 @@
     </p>
     <p class="lead">책 관련</p>
     <p>
-      <a class="btn btn-lg btn-dark" href="/items/new">책 등록</a>
-      <a class="btn btn-lg btn-dark" href="/items">책 목록</a>
+      <a class="btn btn-lg btn-dark" href="/books/new">책 등록</a>
+      <a class="btn btn-lg btn-dark" href="/books">책 목록</a>
     </p>
     <p class="lead">주문 기능</p>
     <p>
