- Book form 등록 오류수정 진행 중

--- a/src/main/resources/templates/books/createBookForm.html
+++ b/src/main/resources/templates/books/createBookForm.html
@@ -38,11 +38,11 @@
           <div class="col-12">
             <label for="grade" class="form-label">Select Grade</label>
             <select th:field="*{grade}" class="form-select" id="grade" required>
-              <option value="5.0">Best</option>
-              <option value="4.0">Better</option>
-              <option value="3.0">Good</option>
-              <option value="2.0">Normal</option>
-              <option value="1.0">Bad</option>
+              <option value="BEST">Best</option>
+              <option value="BETTER">Better</option>
+              <option value="GOOD">Good</option>
+              <option value="NORMAL">Normal</option>
+              <option value="BAD">Bad</option>
             </select>
             <div class="invalid-feedback">Please select</div>
           </div>
