--- a/src/main/resources/templates/books/bookList.html
+++ b/src/main/resources/templates/books/bookList.html
@@ -24,8 +24,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
                     <button type="button" class="btn btn-sm btn-outline-secondary">삭제</button>
-                    <button type="button" class="btn btn-sm btn-outline-secondary">
-                      <a href="#" th:href="@{/books/{id}/edit (id=${books.id})} )">수정</a>
+                    <a th:href="@{/books/{id}/edit (id=${book.id})}" class="btn btn-sm btn-outline-secondary" role="button">수정</a>
                     </button>
                   </div>
                 </div>
