--- a/src/main/resources/templates/books/updateBookForm.html
+++ b/src/main/resources/templates/books/updateBookForm.html
@@ -17,7 +17,7 @@
             <h4 class="mb-3">책 수정 창입니다.</h4>
 
             <form class="needs-validation" th:object="${form}" method="post">
-                <!--<input type="hidden" th:field="*{id}"/>-->
+                <input type="hidden" th:field="*{id}"/>
                 <div class="row g-3">
 
                     <div class="col-12">
@@ -88,7 +88,7 @@
 
                 <hr class="my-4">
 
-                <button class="w-100 btn btn-primary btn-lg" type="submit">등록하기</button>
+                <button class="w-100 btn btn-primary btn-lg" type="submit">수정하기</button>
             </form>
         </div>
     </main>
