--- a/src/main/resources/templates/books/bookList.html
+++ b/src/main/resources/templates/books/bookList.html
@@ -23,7 +23,7 @@
                 <p class="card-text" th:text="${book.title}"></p>
                 <div class="d-flex justify-content-between align-items-center">
                   <div class="btn-group">
-                    <button type="button" class="btn btn-sm btn-outline-secondary">삭제</button>
+                    <a th:href="@{/books/{id}/delete (id=${book.id})}" class="btn btn-sm btn-outline-secondary" role="button">삭제</a>
                     <a th:href="@{/books/{id}/edit (id=${book.id})}" class="btn btn-sm btn-outline-secondary" role="button">수정</a>
                     </button>
                   </div>
