--- a/src/main/resources/templates/members/memberList.html
+++ b/src/main/resources/templates/members/memberList.html
@@ -11,16 +11,25 @@
     <div class="py-5 text-center">
       <h2>Member List form</h2>
     </div>
-    <div class="card" style="width: 18rem;" th:each="member:${members}">
-      <div class="card-header" th:text="${member.name}">Empty Name</div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item" th:text="${member.age}">Empty Age</li>
-        <li class="list-group-item" th:text="${member.memberSexual}">Empty Sexual</li>
-        <li class="list-group-item" >
-          <a href="#" th:href="@{/bookreports/{id} (id=${member.id})}">사용자 독후감 조회</a>
-        </li>
-      </ul>
+    <div class="row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
+      <div class="card cols" style="width: 18rem;" th:each="member:${members}">
+        <div class="card-header" th:text="${member.name}">Empty Name</div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item" th:text="${member.age}">Empty Age</li>
+          <li class="list-group-item" th:text="${member.memberSexual}">Empty Sexual</li>
+          <li class="list-group-item" >
+            <a href="#" th:href="@{/bookreports/{id} (id=${member.id})}">사용자 독후감 조회</a>
+          </li>
+        </ul>
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="btn-group">
+            <a th:href="@{/members/{id}/delete (id=${member.id})}" class="btn btn-sm btn-outline-secondary" role="button">삭제</a>
+            <a th:href="@{/members/{id}/edit (id=${member.id})}" class="btn btn-sm btn-outline-secondary" role="button">수정</a>
+          </div>
+        </div>
+      </div>
     </div>
+
 
   </main>
   <div th:replace="fragments/footer :: footer" />
