--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
     </p>
     <p class="lead">주문 기능</p>
     <p>
-      <a class="btn btn-lg btn-info" href="/order">독후감 등록</a>
+      <a class="btn btn-lg btn-info" href="/bookreport">독후감 등록</a>
       <a class="btn btn-lg btn-info" href="/orders">독후감 목록</a>
     </p>
   </div>
