--- a/src/main/resources/templates/bookreports/bookReportForm.html
+++ b/src/main/resources/templates/bookreports/bookReportForm.html
@@ -4,7 +4,7 @@
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form role="form" action="/bookreport" th:object="${bookReportForm}" method="post">
+    <form role="form" action="/bookreports/new" th:object="${bookReportForm}" method="post">
         <div class="form-group">
             <label for="member">주문회원</label>
             <select name="memberId" id="member" class="form-control">
