--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -16,7 +16,6 @@
     <div class="col-md-7 col-lg-8">
       <form class="needs-validation" action="/members/new" th:object="${memberForm}" method="post">
         <div class="row g-3">
-
           <div class="col-12">
             <label for="username" class="form-label">사용자 이름</label>
             <input type="text" class="form-control" th:field="*{name}" id="username" placeholder="이름을 입력하세요" required="">
@@ -33,19 +32,6 @@
             </div>
           </div>
 
-
-          <!--<h4 class="col-12">성 별</h4>
-          <div class="my-3">
-            <div class="form-check">
-              <input id="man" name="sexualMethod" th:field="*{sexual}" value="man" type="radio" class="form-check-input" checked="" required="">
-              <label class="form-check-label" for="man">Man</label>
-            </div>
-            <div class="form-check">
-              <input id="woman" name="sexualMethod" th:field="*{sexual}" value="woman" type="radio" class="form-check-input" required="">
-              <label class="form-check-label" for="woman">Woman</label>
-            </div>
-          </div>-->
-
           <div class="col-12">
             <label for="age" class="form-label">성별</label>
             <select class="form-control" th:field="*{sexual}">
@@ -55,6 +41,32 @@
                 val
               </option>
             </select>
+          </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <label for="street" class="form-label">거리</label>
+              <input type="text" class="form-control" th:field="*{street}" id="street" placeholder="거리를 입력하세요" required="">
+              <div class="invalid-feedback">
+                Please enter your street.
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <label for="street" class="form-label">도시</label>
+              <input type="text" class="form-control" th:field="*{city}" id="city" placeholder="도시를 입력하세요" required="">
+              <div class="invalid-feedback">
+                Please enter your city.
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <label for="zipcode" class="form-label">번지수</label>
+              <input type="text" class="form-control" th:field="*{zipcode}" id="zipcode" placeholder="번지를 입력하세요" required="">
+              <div class="invalid-feedback">
+                Please enter your zipcode.
+              </div>
+            </div>
           </div>
 
 
