--- a/src/main/resources/templates/books/createBookForm.html
+++ b/src/main/resources/templates/books/createBookForm.html
@@ -34,52 +34,58 @@
           </div>
 
 
-          <!--<div class="col-12">
-            <label for="grade" class="form-label">Select Grade</label>
-            <select th:field="*{grade}" class="form-select" id="grade" required>
-              <option value="BEST">Best</option>
-              <option value="BETTER">Better</option>
-              <option value="GOOD">Good</option>
-              <option value="NORMAL">Normal</option>
-              <option value="BAD">Bad</option>
-            </select>
-            <div class="invalid-feedback">Please select</div>
-          </div>-->
+          <div class="row">
+            <div class="col-md-6">
+              <label class="form-label">책 카테고리</label>
+              <select class="form-control" th:field="*{category}">
+                <option th:each="categoryValue : ${T(com.bookreport.core.domain.BookCategory).values()}"
+                        th:value="${categoryValue.name()}"
+                        th:text="${categoryValue.name()}">
+                  val
+                </option>
+              </select>
+            </div>
 
-          <div class="col-12">
-            <label class="form-label">책 카테고리</label>
-            <select class="form-control" th:field="*{category}">
-              <option th:each="categoryValue : ${T(com.bookreport.core.domain.BookCategory).values()}"
-                      th:value="${categoryValue.name()}"
-                      th:text="${categoryValue.name()}">
-                val
-              </option>
-            </select>
-          </div>
-
-          <div class="col-12">
-          <label for="isbn" class="form-label">ISBN 코드</label>
-          <input type="text" class="form-control" th:field="*{isbn}" id="isbn" placeholder="isbn을 입력하세요" required="">
-          <div class="invalid-feedback">
-            Please enter ISBN.
-          </div>
-          </div>
-
-          <div class="col-12">
-          <label for="price" class="form-label">가격</label>
-          <input type="text" class="form-control" th:field="*{price}" id="price" placeholder="가격을 입력하세요" required="">
-          <div class="invalid-feedback">
-            Please enter Price.
-          </div>
-          </div>
-
-          <div class="col-12">
-            <label for="stockQuantity" class="form-label">수량</label>
-            <input type="text" class="form-control" th:field="*{stockQuantity}" id="stockQuantity" placeholder="수량을 입력하세요" required="">
-            <div class="invalid-feedback">
-              Please enter stock.
+            <div class="col-md-6">
+              <label class="form-label">책 평점</label>
+              <select class="form-control" th:field="*{grade}">
+                <option th:each="gradeValue : ${T(com.bookreport.core.domain.Grade).values()}"
+                        th:value="${gradeValue.name()}"
+                        th:text="${gradeValue.name()}">
+                  val
+                </option>
+              </select>
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-md-4">
+              <label for="isbn" class="form-label">ISBN 코드</label>
+              <input type="text" class="form-control" th:field="*{isbn}" id="isbn" placeholder="isbn을 입력하세요" required="">
+              <div class="invalid-feedback">
+                Please enter ISBN.
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <label for="price" class="form-label">가격</label>
+              <input type="text" class="form-control" th:field="*{price}" id="price" placeholder="가격을 입력하세요" required="">
+              <div class="invalid-feedback">
+                Please enter Price.
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <label for="stockQuantity" class="form-label">수량</label>
+              <input type="text" class="form-control" th:field="*{stockQuantity}" id="stockQuantity" placeholder="수량을 입력하세요" required="">
+              <div class="invalid-feedback">
+                Please enter stock.
+              </div>
+            </div>
+          </div>
+
+
+
 
           <div class="col-12">
           <label for="publishDate" class="form-label">출판일</label>
@@ -89,16 +95,7 @@
           </div>
           </div>
 
-          <div class="col-12">
-            <label class="form-label">책 평점</label>
-            <select class="form-control" th:field="*{grade}">
-              <option th:each="gradeValue : ${T(com.bookreport.core.domain.Grade).values()}"
-                      th:value="${gradeValue.name()}"
-                      th:text="${gradeValue.name()}">
-                val
-              </option>
-            </select>
-          </div>
+
 
           <div class="col-12">
             <label class="form-label">Upload Book Image</label>
