--- a/src/main/resources/templates/books/updateBookForm.html
+++ b/src/main/resources/templates/books/updateBookForm.html
@@ -9,19 +9,18 @@
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
     <main>
         <div class="py-5 text-center">
-            <h2>Book Update form</h2>
+            <h2>책 수정</h2>
         </div>
 
 
         <div class="col-md-7 col-lg-8">
-            <h4 class="mb-3">책 수정 창입니다.</h4>
 
             <form class="needs-validation" th:object="${form}" method="post">
                 <input type="hidden" th:field="*{id}"/>
                 <div class="row g-3">
 
                     <div class="col-12">
-                        <label th:for="title" class="form-label">Book Title</label>
+                        <label th:for="title" class="form-label">책 제목</label>
                         <input type="text" class="form-control" th:field="*{title}">
                         <div class="invalid-feedback">
                             Please enter your Book Title
@@ -29,59 +28,75 @@
                     </div>
 
                     <div class="col-12">
-                        <label th:for="author" class="form-label">Author</label>
+                        <label th:for="author" class="form-label">저자</label>
                         <input type="text" class="form-control" th:field="*{author}" >
                         <div class="invalid-feedback">
                             Please enter author.
                         </div>
                     </div>
 
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label class="form-label">평점</label>
+                            <select class="form-control" th:field="*{grade}">
+                                <option th:each="gradeValue : ${T(com.bookreport.core.domain.Grade).values()}"
+                                        th:value="${gradeValue.name()}"
+                                        th:text="${gradeValue.name()}">
+                                    val
+                                </option>
+                            </select>
+                        </div>
 
-                    <div class="col-12">
-                        <label for="grade" class="form-label">Select Grade</label>
-                        <select th:field="*{grade}" class="form-select" id="grade" required>
-                            <option th:selected="${grade}=='BEST'" value="BEST">Best</option>
-                            <option th:selected="${grade}=='BETTER'"  value="BETTER">Better</option>
-                            <option th:selected="${grade}=='GOOD'" value="GOOD">Good</option>
-                            <option th:selected="${grade}=='NORMAL'" value="NORMAL">Normal</option>
-                            <option th:selected="${grade}=='BAD'" value="BAD">Bad</option>
-                        </select>
-                        <div class="invalid-feedback">Please select</div>
-                    </div>
-
-                    <div class="col-12">
-                        <label for="isbn" class="form-label">ISBN</label>
-                        <input  type="text" class="form-control" th:field="*{isbn}" id="isbn" placeholder="isbn을 입력하세요" disabled>
-                        <div class="invalid-feedback">
-                            Please enter ISBN.
+                        <div class="col-md-6">
+                            <label class="form-label">카테고리</label>
+                            <select class="form-control" th:field="*{category}">
+                                <option th:each="categoryValue : ${T(com.bookreport.core.domain.BookCategory).values()}"
+                                        th:value="${categoryValue.name()}"
+                                        th:text="${categoryValue.name()}">
+                                    val
+                                </option>
+                            </select>
                         </div>
                     </div>
 
-                    <div class="col-12">
-                        <label for="sold" class="form-label">Sold</label>
-                        <input type="text" class="form-control" th:field="*{sold}" id="sold" placeholder="수량을 입력하세요" required="">
-                        <div class="invalid-feedback">
-                            Please enter Sold.
+                    <div class="row">
+                        <div class="col-12">
+                            <label for="price" class="form-label">가격</label>
+                            <input type="text" class="form-control" th:field="*{price}" id="price" placeholder="가격을 입력하세요" required="">
+                            <div class="invalid-feedback">
+                                Please enter Price.
+                            </div>
+                        </div>
+
+                        <div class="col-12">
+                            <label for="stockQuantity" class="form-label">수량</label>
+                            <input type="text" class="form-control" th:field="*{stockQuantity}" id="stockQuantity" placeholder="재고를 입력하세요" required="">
+                            <div class="invalid-feedback">
+                                Please enter Stock.
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-12">
-                        <label for="publish_date" class="form-label">Publish Date</label>
-                        <input type="date" class="form-control" th:field="*{publish_date}" id="publish_date" placeholder="출판일을 선택하세요" disabled>
-                        <div class="invalid-feedback">
-                            Please enter Publish Date.
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <label for="isbn" class="form-label">ISBN</label>
+                            <input  type="text" class="form-control" th:field="*{isbn}" id="isbn" placeholder="isbn을 입력하세요" disabled>
+                            <div class="invalid-feedback">
+                                Please enter ISBN.
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <label for="publishDate" class="form-label">출판일</label>
+                            <input type="date" class="form-control" th:field="*{publishDate}" id="publishDate" placeholder="출판일을 선택하세요" disabled>
+                            <div class="invalid-feedback">
+                                Please enter Publish Date.
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-12">
-                        <label for="category" class="form-label">Select Category</label>
-                        <select th:field="*{category}" class="form-select" id="category" required>
-                            <option th:selected="${category}=='COMIC'" value="COMIC">Comic</option>
-                            <option th:selected="${category}=='HISTORY'" value="HISTORY">History</option>
-                            <option th:selected="${category}=='DOCUMENTARY'" value="DOCUMENTARY">Documentary</option>
-                        </select>
-                        <div class="invalid-feedback">Please select Category</div>
-                    </div>
+
 
                 </div>
 
