- Order를 위한 기본 repository 기능 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,11 +19,19 @@
       <a class="btn btn-lg btn-dark" href="/books/new">책 등록</a>
       <a class="btn btn-lg btn-dark" href="/books">책 목록</a>
     </p>
-    <p class="lead">주문 기능</p>
+
+    <p class="lead">독후감 기능</p>
     <p>
       <a class="btn btn-lg btn-info" href="/bookreports/new">독후감 등록</a>
       <a class="btn btn-lg btn-info" href="/bookreports">독후감 목록</a>
     </p>
+
+    <p class="lead">주문 기능</p>
+    <p>
+      <a class="btn btn-lg btn-info" href="/orders/new">주문 등록</a>
+      <a class="btn btn-lg btn-info" href="/orders">주문 목록</a>
+    </p>
+
   </div>
   <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
