--- a/src/main/resources/templates/bookreports/bookReportForm.html
+++ b/src/main/resources/templates/bookreports/bookReportForm.html
@@ -5,27 +5,32 @@
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <form role="form" action="/bookreports/new" th:object="${bookReportForm}" method="post">
-        <div class="form-group">
-            <label for="member">주문회원</label>
-            <select name="memberId" id="member" class="form-control">
-                <option value="">멤버선택</option>
-                <option th:each="member : ${members}"
-                        th:value="${member.id}"
-                        th:text="${member.name}" />
-            </select>
+
+        <div class="row">
+            <div class="col-md-6">
+                <label for="member">회원</label>
+                <select name="memberId" id="member" class="form-control">
+                    <option value="">멤버선택</option>
+                    <option th:each="member : ${members}"
+                            th:value="${member.id}"
+                            th:text="${member.name}" />
+                </select>
+            </div>
+            <div class="col-md-6">
+                <label for="book">책 이름</label>
+                <select name="bookId" id="book" class="form-control">
+                    <option value="">책선택</option>
+                    <option th:each="book : ${books}"
+                            th:value="${book.id}"
+                            th:text="${book.title}" />
+                </select>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="book">상품명</label>
-            <select name="bookId" id="book" class="form-control">
-                <option value="">책선택</option>
-                <option th:each="book : ${books}"
-                        th:value="${book.id}"
-                        th:text="${book.title}" />
-            </select>
-        </div>
+
         <div class="form-group">
             <label for="content" class="form-label">내용 입력</label>
-            <input type="text" class="form-control" th:field="*{content}" id="content" placeholder="내용을 입력하세요" required="">
+            <!--<input type="text" class="form-control" th:field="*{content}" id="content" placeholder="내용을 입력하세요" required="">-->
+            <textarea type="text" class="form-control" th:field="*{content}" id="content" placeholder="내용을 입력하세요" required=""></textarea>
             <div class="invalid-feedback">
                 독후감 내용을 입력해주세요.
             </div>
