--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -13,4 +13,79 @@ ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
   <title>Hello, world!</title>
+
+  <style>
+        @import url(https://fonts.googleapis.com/css?family=Roboto:400,700,500);
+
+        /* main Styles */
+
+        html { box-sizing: border-box; }
+
+        *, *:before, *:after { box-sizing: inherit; }
+
+        body {
+            background: #fafafa;
+            font-family: "Roboto", sans-serif;
+            font-size: 14px;
+            margin: 0;
+        }
+
+        a { text-decoration: none; }
+
+        .container {
+            width: 1000px;
+            margin: auto;
+        }
+
+        h1 { text-align:center; margin-top:150px;}
+
+        /* Navigation Styles */
+
+        nav { background: #2ba0db; }
+
+        nav ul {
+            font-size: 0;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline-block;
+            position: relative;
+        }
+
+        nav ul li a {
+            color: #fff;
+            display: block;
+            font-size: 14px;
+            padding: 15px 14px;
+            transition: 0.3s linear;
+        }
+
+        nav ul li:hover { background: #126d9b; }
+
+        nav ul li ul {
+            border-bottom: 5px solid #2ba0db;
+            display: none;
+            position: absolute;
+            width: 250px;
+        }
+
+        nav ul li ul li {
+            border-top: 1px solid #444;
+            display: block;
+        }
+
+        nav ul li ul li:first-child { border-top: none; }
+
+        nav ul li ul li a {
+            background: #373737;
+            display: block;
+            padding: 10px 14px;
+        }
+
+        nav ul li ul li a:hover { background: #126d9b; }
+
+        nav .fa.fa-angle-down { margin-left: 6px; }
+    </style>
 </head>
